--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.316.0",
     "next": "^16.1.6",
+    "next-intl": "^4.8.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
